# Website

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  cdk.json  docker-compose.yml  pyproject.toml  routes.yaml
.github/workflows/: ci.yml  deploy.yml
docker/ghost/: Dockerfile  validate.sh
docker/nginx/: default.conf
docs/: ARCHITECTURE_DECISIONS.md  FRONTEND_TEMPLATES.md  IMPLEMENTATION_NOTES.md  PROJECT_PLAN_REQUEST.md  SPEC.md
frontend/: README.md  build.py  watch.py
frontend/assets/css/: reset.css  screen.css  tokens.css
frontend/jinja/: base.html
frontend/shell/: shell.html
infra/: app.py
infra/stacks/: app_stack.py  cdn_stack.py  cert_stack.py  database_stack.py  ecr_stack.py  network_stack.py
scripts/: import_medium.py  new_env.py  setup_oidc.py
tests/: test_frontend.py
tests/smoke/: test_smoke.py
theme/: bulletins.hbs  default.hbs  home.hbs  index.hbs  package.json  post.hbs
theme/assets/css/: base.css  composition.css
theme/partials/: bulletin-card.hbs  bulletin.hbs
