[project]
name = "dn-website"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "requests>=2.32.0",
]
# Tooling for the one-off/repeatable Medium -> Ghost migration (scripts/import_medium.py).
migrate = [
    "beautifulsoup4>=4.12.0",
    "pyjwt>=2.8.0",
    "requests>=2.32.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
